--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ language: python
 python:
   - "2.7" 
   
-sudo: required
+sudo: false
+
+before_install:
+- chmod +x summarizer/test/*.py
 
 install:
   - pip install -r summarizer/requirements.txt
