--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 
 install:
   - pip install -r summarizer/requirements.txt
+  - travis_wait 30 python -m nltk.downloader punkt
   
 script:
   - python summarizer/test/test.py
