--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_install:
 
 install:
   - pip install -r summarizer/requirements.txt
-  - travis_wait 30 python -m nltk.downloader punkt
+  - travis_wait 30 python -m nltk.downloader punkt  
+  - travis_wait 30 python -m nltk.downloader stopwords
   
 script:
   - python summarizer/test/test.py
