Add sonarcloud integration to TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,21 @@ language: python
 python:
   - "2.7" 
 
+addons:
+  sonarcloud:
+    organization: "franfj-github"
+
 before_install:
   - chmod +x summarizer/test/*.py
 
 install:
+  - yarn install
   - pip install -r summarizer/requirements.txt
   - travis_wait 30 python -m nltk.downloader punkt  
   - travis_wait 30 python -m nltk.downloader stopwords
   
 script:
+  - yarn build
+  - sonar-scanner
   - python summarizer/test/test.py
   
