--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.projectVersion=0.0.4
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=./summarizer/src
+sonar.tests=./summarizer/test
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
