--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,12 @@ install:
   - pip install -r summarizer/requirements.txt
   - pip install pytest
   - pip install coverage
+  - pip install nose
   - travis_wait 30 python -m nltk.downloader punkt  
   - travis_wait 30 python -m nltk.downloader stopwords
   
 script:
   - pytest
-  - coverage run
-  - coverage xml -i
+  - nosetests --with-coverage --cover-erase --cover-package=summarizer --cover-html
   - sonar-scanner
   
