--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=franfj_Summarizer
+
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Summarizer
 sonar.projectVersion=0.0.4
@@ -8,6 +9,9 @@ sonar.projectVersion=0.0.4
 # This property is optional if sonar.modules is set. 
 sonar.sources=./summarizer/src
 sonar.tests=./summarizer/test
+
+# Path to xunit report
+sonar.python.xunit.reportpath=./nosetests.xml
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
