--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ install:
   
 script:
   - pytest
-  - nosetests --with-coverage --cover-erase --cover-package=summarizer --with-xunit
+  - nosetests --with-coverage --cover-erase --cover-package=summarizer --cover-xml --with-xunit
   - sonar-scanner
   
