--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,8 +10,9 @@ sonar.projectVersion=0.0.4
 sonar.sources=./summarizer/src
 sonar.tests=./summarizer/test
 
-# Path to xunit report
-sonar.python.xunit.reportpath=./nosetests.xml
+# Path to unit test reports
+sonar.python.xunit.reportpath=nosetests.xml
+sonar.python.coverage.reportPath=coverage.xml
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
